--- a/geoserver_logging.yml
+++ b/geoserver_logging.yml
@@ -13,6 +13,7 @@ spring:
         - "logging_debug_acl"
         - "logging_debug_security"
 logging:
+  logging.pattern.level: "trace_id=%mdc{trace_id} span_id=%mdc{span_id} trace_flags=%mdc{trace_flags} %5p"
   level:
     root: warn
     org.springframework: warn
