--- a/config-service.yml
+++ b/config-service.yml
@@ -1,8 +1,12 @@
+spring.config.import:
+ - observability.yml
+
 # Should only be set in application.yml. Setting the value in bootstrap.yml will cause undesirable side effects like registering in eureka with an UNKNOWN status.
 # See https://cloud.spring.io/spring-cloud-netflix/2.0.x/multi/multi__service_discovery_eureka_clients.html#_eureka_s_health_checks
 eureka.client.healthcheck.enabled: false
 
 spring:
+  jmx.enabled: false
   cloud:
     config:
       # allow clients to override external property sources
